# youtube_miner

./: .env.example  .gitignore  DEMO_VIDEO_SCRIPT.md  README.md  Sample.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: youtube-miner.mdc
.specify/memory/: constitution.md  problem.md
docs/: .$architecture.drawio.bkp  technical_design.md
examples/: basic_usage.py  compare_models.py  compare_texts.py
specs/001-youtube-miner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  __main__.py  cli.py
src/comparator/: __init__.py  cer.py  hybrid.py  normalizer.py  semantic.py  wer.py
src/converter/: __init__.py  audio.py
src/deduplicator/: __init__.py  ngram.py
src/downloader/: __init__.py  captions.py  youtube.py
src/models/: __init__.py  audio.py  comparison.py  transcript.py
src/pipeline/: __init__.py  orchestrator.py
src/transcriber/: __init__.py  base.py  faster_whisper.py  indic_seamless.py  whisper_large.py  whisper_tiny.py
src/utils/: __init__.py  config.py  language_detector.py  logger.py
src/vad/: __init__.py  chunker.py
src/web/: __init__.py  app.py
src/web/static/: script.js  style.css
src/web/templates/: index.html
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_captions.py  test_cli.py  test_comparator.py  test_converter.py  test_deduplicator.py  test_downloader.py  test_models.py  test_normalizer.py  test_transcriber.py  test_vad.py
